--- a/SeyehatProjesi/Web.config
+++ b/SeyehatProjesi/Web.config
@@ -17,6 +17,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+  <authentication mode="Forms">
+	  <forms loginUrl="/GirisYap/Login"></forms>
+  </authentication>
   </system.web>
   <runtime>
   <loadFromRemoteSources enabled="true"/>
